# speech-voice-agent-examples

./: .gitignore  Dockerfile  NVIDIA_PIPECAT.md  README.md  pyproject.toml
deploy/docker/: Dockerfile
deploy/k8s/: README.md
examples/nvidia_rag/: README.md  bot.py  env.example  pyproject.toml
examples/opentelemetry/: README.md  bot.py
examples/riva_nmt/: README.md  bot.py  pyproject.toml
examples/riva_speech_langchain/: README.md  bot.py  env.example  pyproject.toml
examples/speech-to-speech/: bot.py  docker-compose.yml  env.example
examples/speech_planner/: Dockerfile  README.md  bot.py  docker-compose.yml  prompt.yml  pyproject.toml
examples/voice_agent_multi_thread/: DOCKER_DEPLOYMENT.md  Dockerfile  PIPECAT_MULTI_THREADING.md  README.md  docker-compose.yml  env.example  langgraph_llm_service.py  pipeline.py  pyproject.toml  start.sh
examples/voice_agent_webrtc_langgraph/: Dockerfile  README.md  langgraph_llm_service.py  pipeline.py  start.sh
tests/perf/: README.md  file_input_client.py  run_multi_client_benchmark.sh  ttfb_analyzer.py
tests/unit/: test_animation_graph_services.py  test_basic_pipelines.py  test_elevenlabs.py  test_nvidia_llm_service.py  test_nvidia_rag_service.py  test_riva_asr_service.py  test_riva_tts_service.py  test_speech_planner.py  test_transcription_sync_processors.py
tools/scripts/: github_release.sh
web-ui/: .gitignore  README.md  eslint.config.js  index.html  jest.config.ts  package.json  tsconfig.base.json  tsconfig.json  tsconfig.test.json
web-ui/public/: linear-pcm-processor.worklet.js
web-ui/src/: App.css  (+3 more)
(+122 files in other folders)
